# KFTurboStatServer

./: .dockerignore  .gitignore  ConnectionManager.py  DatabaseManager.py  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_DatabaseManager.py
StatPage/: README.md  api.py  app.py  card_names.json  db.py  index.html
StatPage/static/: style.css
StatPage/static/js/: filters.js  format.js  main.js
StatPage/static/js/pages/: cards.js  leaderboards.js  overview.js  perks.js  player.js  session.js  sessions.js
StatPage/templates/: base.html  cards.html  index.html  leaderboards.html  perks.html  player.html  session.html  sessions.html
