[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kfturbostatserver"
version = "0.1.0"
description = "Network database manager for Killing Floor Turbo analytics payloads."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "Flask>=3.0",
]

[tool.setuptools]
py-modules = [
    "ConnectionManager",
    "DatabaseManager",
]
