[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kfturbostatserver"
version = "0.1.0"
description = "Network database manager for Killing Floor Turbo analytics payloads."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[tool.setuptools]
py-modules = [
    "ConnectionManager",
    "DatabaseManager",
]
